--- a/style.css
+++ b/style.css
@@ -82,4 +82,22 @@ body {
     justify-content: center;
     align-items: center;
     color-interpolation-filters: #fff;
+    border: 1px solid #313131;
+    transition: transform 0.5s;
+}
+
+.password:hover {
+    transform: scale(1.05);
+}
+
+.toltip {
+    color: #fff;
+    position: relative;
+    top: 20px;
+    padding: 6px 8px;
+    background: rgb(15, 15, 15);
+    text-align: center;
+    font-size: 16px;
+    border-radius: 6px;
+    visibility: hidden;
 }
