--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body {
 }
 
 .password:hover {
-    transform: scale(1.05);
+    transform: scale(1.04);
 }
 
 .toltip {
@@ -100,4 +100,17 @@ body {
     font-size: 16px;
     border-radius: 6px;
     visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+}
+
+
+.container-password:hover .toltip {
+    visibility: visible;
+    bottom: 50px;
+    opacity: 1;
+}
+
+.hide {
+    display: none;
 }
